2005-08-08  Gerhard Jaeger <gerhard@gjaeger.de> 

	* acinclude.m4 configure: Locking feature will be disabled on OS/2
	  per default (according to Paul Smedley <paul@smedley.info>).
	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.c: Bumped build number.
	* doc/plustek/Plustek-USB.txt doc/descriptions/plustek.desc 
	  doc/sane-plustek.man backend/plustek-usb.c backend/plustek-usbdevs.c:
	  Added support for CanoScan LiDE25.

2005-08-07  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c: Use first known device if no explicit device name
	  is specified

2005-08-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in: Updated version. Enabled compilation
	  warnings.
	* doc/releases.txt: Typo fix.
	* config.guess config.sub: Updated from libtool 1.5.18.
	* configure configure.in include/sane/config.h.in
	  sanei/sanei_usb.c: Added support for usb functionality on OS/2
	  using the usbcalls interface (patch from Paul Smedley
	  <paul@smedley.info>).
	* sanei/sanei_usb.c: Fixed some compilation warnings.

Older entries can be found in ChangeLog-1.0.16.