@@ -1,3 +1,8 @@
+2005-08-09  Henning Meier-Geinitz <henning@meier-geinitz.de>
+	
+	* sanei/sanei_usb.c: Minor fixes for usbcalls interface (patch
+	  from Paul Smedley <paul@smedley.info>).
+	
 2005-08-08  Gerhard Jaeger <gerhard@gjaeger.de> 
 
 	* acinclude.m4 configure: Locking feature will be disabled on OS/2
